# captain

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.release  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  README.es.md  README.fr.md  README.md  README.zh.md  SECURITY.md  captain.toml.example  docker-compose.personal.yml  docker-compose.trusted.yml  docker-compose.yml  docker-compose.yolo.yml  docker-entrypoint.sh  flake.nix  start.sh
crates/captain-api/: Cargo.toml
crates/captain-api/src/: a2a_routes.rs  agent_api_audit.rs  agent_api_config_status.rs  agent_api_egress.rs  agent_api_egress_config_routes.rs  agent_api_egress_queue.rs  agent_api_egress_routes.rs  agent_api_idempotency.rs  agent_api_ingress_support.rs  agent_api_manifest_routes.rs  agent_api_route_tests.rs  agent_api_routes.rs  agent_api_token_routes.rs  agent_config_routes.rs  agent_control_routes.rs  agent_delivery_routes.rs  agent_file_routes.rs  agent_lifecycle_routes.rs  agent_message_routes.rs  agent_runtime_config_routes.rs  agent_session_view_routes.rs  agent_spawn_routes.rs  agent_update_routes.rs  approval_routes.rs  audit_routes.rs  binding_routes.rs  capspec_routes.rs  channel_audit.rs  channel_bridge.rs  channel_config_store.rs  channel_readiness.rs  channel_registry.rs  channel_registry_email.rs  channel_registry_tests.rs  channel_routes.rs  channel_runtime_policy.rs  channel_test_delivery.rs  clawhub_routes.rs  command_routes.rs  comms_routes.rs  (+231 more)
crates/captain-api/static/: app_body.html  config_body.html  manifest.json  terminal_body.html
crates/captain-api/static/css/: app.css  config.css  terminal.css  theme.css
crates/captain-api/static/js/: embed_chat.js
crates/captain-api/tests/: api_integration_test.rs  daemon_lifecycle_test.rs  load_test.rs
crates/captain-capspec/: Cargo.toml
crates/captain-capspec/src/: compiler.rs  compiler_tests.rs  executor.rs  executor_drive.rs  executor_scope.rs  executor_step.rs  executor_tests.rs  executor_types.rs  lib.rs  model.rs  policy.rs  registry.rs  registry_management.rs  registry_reload.rs  registry_tests.rs  registry_types.rs  run_store.rs  run_store_crypto.rs  run_store_read.rs  run_store_recovery.rs  run_store_state.rs  state_cipher.rs  store.rs  template.rs  watcher.rs  watcher_tests.rs
crates/captain-capspec/tests/: certification_fixtures.rs
crates/captain-cli/: Cargo.toml
crates/captain-cli/src/: agent_api_sheet.rs  bundled_agents.rs  cli_args.rs  cli_args_config.rs  cli_args_ops.rs  cli_args_project.rs  cli_root.rs  cli_runtime.rs  cli_support.rs  daemon_api.rs  dotenv.rs  i18n.rs  launcher.rs  main.rs  mcp.rs  snapshot.rs  templates.rs  tests.rs  ui.rs  workspace_config.rs
crates/captain-cli/src/commands/: agent.rs  agent_api.rs  agent_caps.rs  approvals.rs  auth.rs  auth_codex.rs  autonomy.rs  channel.rs  channel_inbound.rs  chat.rs  completion.rs  config.rs  config_secrets.rs  config_workspace.rs  cron.rs  daemon.rs  devices.rs  dispatch.rs  dispatch_tests.rs  doctor.rs  embeddings.rs  hand.rs  health.rs  init.rs  integration.rs  integrations.rs  log_events.rs  logs.rs  memory.rs  memory_native.rs  message.rs  mod.rs  model_state.rs  models.rs  process.rs  project.rs  project_checkpoints.rs  project_context.rs  project_goals.rs  project_list.rs  (+54 more)
crates/captain-cli/src/tui/: agent_status.rs  automation_status.rs  branding.rs  chat_runner.rs  chrome.rs  command_args.rs  copy_slash_state.rs  decision_status.rs  default_agent.rs  diff_render.rs  (+52 more)
crates/captain-cli/tests/: secret_prompt_noninteractive.rs
crates/captain-kernel/: Cargo.toml
crates/captain-kernel/src/: approval.rs  auth.rs  auto_reply.rs  background.rs  builtin_crons.rs  capabilities.rs  capability_routing.rs  channel_delivery_retry.rs  channel_routing.rs  chat_broadcast.rs  codex_model_updates.rs  codex_model_updates_delivery.rs  codex_model_updates_tests.rs  config.rs  config_reload.rs  config_reload_tests.rs  config_watcher.rs  cron.rs  cron_agent_turn.rs  cron_delivery_queue.rs  delivery_reliability.rs  ephemeral_agents.rs  error.rs  event_bus.rs  fleet_autoscale.rs  goals.rs  graph_memory.rs  graph_seed.rs  heartbeat.rs  kernel.rs  kernel_agent_api_provision.rs  kernel_agent_lifecycle.rs  kernel_agent_runtime.rs  kernel_agent_runtime_tests.rs  kernel_agent_spawn.rs  kernel_agent_turn.rs  kernel_agent_turn_observability.rs  kernel_agent_workspace.rs  kernel_autonomy_runtime.rs  kernel_background_startup.rs  (+110 more)
crates/captain-kernel/tests/: integration_test.rs  multi_agent_test.rs  wasm_agent_integration_test.rs  workflow_integration_test.rs
crates/captain-runtime/: Cargo.toml
crates/captain-runtime/src/: a2a.rs  active_project.rs  agent_loop.rs  agent_loop_ask_user.rs  agent_loop_budget.rs  agent_loop_codex_request.rs  agent_loop_completion.rs  agent_loop_completion_tests.rs  agent_loop_context.rs  agent_loop_context_tests.rs  agent_loop_control.rs  agent_loop_empty_response_tests.rs  agent_loop_end_turn.rs  agent_loop_end_turn_tests.rs  agent_loop_finish.rs  agent_loop_finish_tests.rs  agent_loop_guard.rs  agent_loop_hooks.rs  agent_loop_interjections.rs  agent_loop_iteration.rs  agent_loop_iteration_tests.rs  agent_loop_limits.rs  agent_loop_limits_tests.rs  agent_loop_memory.rs  agent_loop_messages.rs  agent_loop_phase.rs  agent_loop_policy.rs  agent_loop_prompt.rs  agent_loop_quota.rs  agent_loop_quota_tests.rs  agent_loop_request.rs  agent_loop_result.rs  agent_loop_retry.rs  agent_loop_stream_events.rs  agent_loop_text_tool_call_recovery_tests.rs  agent_loop_tool_execution.rs  agent_loop_tool_execution_tests.rs  agent_loop_tool_finish.rs  agent_loop_tool_finish_tests.rs  agent_loop_tool_flow.rs  (+260 more)
crates/captain-types/: Cargo.toml
crates/captain-types/src/: agent.rs  agent_api.rs  approval.rs  capability.rs  config.rs  config_template.rs  durable_fs.rs  error.rs  event.rs  lib.rs  manifest_signing.rs  media.rs  memory.rs  message.rs  model_catalog.rs  quota.rs  release_update.rs  scheduler.rs  ssrf_guard.rs  tool.rs  tool_compat.rs  version.rs  workflow_learning.rs
(+824 files in other folders)
