[package]
name = "captain-capspec"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deterministic CapSpec compiler and registry contracts for Captain"

[dependencies]
captain-types = { path = "../captain-types" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
libc = "0.2"
notify-debouncer-mini = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
globset = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
