[package]
name = "captain-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for the Captain Agent OS"

[[bin]]
name = "captain"
path = "src/main.rs"

[dependencies]
captain-types = { path = "../captain-types" }
captain-kernel = { path = "../captain-kernel", default-features = false }
captain-api = { path = "../captain-api", default-features = false }
captain-memory = { path = "../captain-memory" }
captain-skills = { path = "../captain-skills" }
captain-extensions = { path = "../captain-extensions" }
zeroize = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
sha2 = { workspace = true }
tempfile = { workspace = true }
captain-runtime = { path = "../captain-runtime", default-features = false }
uuid = { workspace = true }
chrono = { workspace = true }
ratatui = { workspace = true }
unicode-width = { workspace = true }
colored = { workspace = true }
pulldown-cmark = { version = "0.10", default-features = false }
arboard = { version = "3.4", default-features = false }
rusqlite = { workspace = true }
similar = { version = "2.5", default-features = false, features = ["text"] }
# TUI polish — image previews via ratatui-image (Sixel/Kitty/iTerm2/halfblocks).
# Compatible with ratatui 0.29; chafa-dyn dropped to avoid the libchafa system
# dep — fallback halfblocks is enough for terminals without graphics support.
ratatui-image = { version = "9", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
# File picker overlay for /image and /file when called without an argument.
# 0.2.x is the last branch compatible with ratatui 0.29; 0.3 bumps to 0.30.
ratatui-explorer = "0.2"
# Masks terminal input for secret prompts (SSH passphrases, API keys, vault
# secrets, bot tokens) — plain prompt_input() echoes cleartext otherwise.
rpassword = "7"

[features]
default = ["local-embeddings"]
local-embeddings = [
    "captain-api/local-embeddings",
    "captain-kernel/local-embeddings",
    "captain-runtime/local-embeddings",
]

[dev-dependencies]
tempfile = { workspace = true }
